--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "author": "Felix Geisendörfer <felix@debuggable.com> (http://debuggable.com/)",
-  "name": "stack-trace",
+  "name": "@positron/stack-trace",
   "description": "Get v8 stack traces as an array of CallSite objects.",
-  "version": "0.0.9",
+  "version": "1.0.0",
   "homepage": "https://github.com/felixge/node-stack-trace",
   "repository": {
     "type": "git",
